--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -76,4 +76,11 @@
         android:drawableLeft="@drawable/ic_other_apps"
         android:text="@string/other_apps" />
 
+    <Button
+        android:id="@+id/totest1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@android:drawable/ic_input_add"
+        android:text="to test1" />
+
 </LinearLayout>
