--- a/res/menu/folder_browser.xml
+++ b/res/menu/folder_browser.xml
@@ -76,10 +76,10 @@
         android:title="@string/create_folder"
         android:visible="true"/>
     <item
-        android:id="@+id/menu_app_info"
+        android:id="@+id/useful_web"
         android:icon="@drawable/ic_about"
         android:orderInCategory="6"
-        android:title="@string/app_info"
+        android:title="@string/useful_web"
         android:visible="true"
         app:showAsAction="ifRoom" />
 
