--- a/res/layout/activity_useful_web.xml
+++ b/res/layout/activity_useful_web.xml
@@ -7,21 +7,77 @@
     tools:context=".Samble1Activity">
 
     <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:id="@+id/scrollView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="420dp"
+                android:layout_height="119dp"
+                android:src="@mipmap/ic_web" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="105dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="Here are some webs you maybe useful for you"
+                android:textAlignment="viewEnd"
+                android:textAllCaps="false"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="34sp"
+                android:textStyle="italic"
+                android:typeface="serif" />
 
             <Button
-                android:id="@+id/test1"
+                android:id="@+id/btnnju"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="test1" />
+                android:drawableLeft="@mipmap/ic_web_nju"
+                android:text="Nju.edu.cn"
+                android:textSize="24sp" />
+
+            <Button
+                android:id="@+id/btngoogle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@mipmap/ic_web_google_round"
+                android:text="Google.com"
+                android:textSize="24sp" />
+
+            <Button
+                android:id="@+id/btngit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@mipmap/ic_web_git"
+                android:text="Github.com"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+                android:textSize="24sp" />
+
+            <Button
+                android:id="@+id/btnbaidu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@mipmap/ic_web_baidu_round"
+                android:text="Baidu.com"
+                android:textSize="24sp" />
+
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
